Phase 1: Zero-Tolerance Arabic Compliance - BLOCKER Eradication
- Fix 10 hardcoded English validation messages → t() calls
- Fix RTL nav CSS (remove row-reverse, let dir=rtl work naturally)
- Add data-i18n-alt for logo alt text translation
- Add page title/description/OG metadata translation
- Add logo.alt + page.title + page.description translation keys
- Timestamp locale now language-aware (ar-QA/en-QA)

--- a/public/index.html
+++ b/public/index.html
@@ -534,8 +534,8 @@
     <!-- Infinite Parts Carousel -->
     <section class="parts-showcase">
         <div class="showcase-header">
-            <span class="showcase-label">Parts Showcase</span>
-            <h2 class="showcase-title">Thousands of Quality Parts</h2>
+            <span class="showcase-label" data-i18n="showcase.label">Parts Showcase</span>
+            <h2 class="showcase-title" data-i18n="showcase.title">Thousands of Quality Parts</h2>
         </div>
         <div class="carousel-wrapper">
             <div class="carousel-track">
@@ -544,8 +544,9 @@
                         loading="lazy">
                     <div class="carousel-item-overlay">
                         <div>
-                            <div class="carousel-item-title">Engine Components</div>
-                            <div class="carousel-item-desc">Premium quality internals</div>
+                            <div class="carousel-item-title" data-i18n="carousel.item1.title">Engine Components</div>
+                            <div class="carousel-item-desc" data-i18n="carousel.item1.desc">Premium quality internals
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -553,8 +554,8 @@
                     <img src="/assets/images/parts/wp8391790-auto-parts-wallpapers.jpg" alt="BMW Parts" loading="lazy">
                     <div class="carousel-item-overlay">
                         <div>
-                            <div class="carousel-item-title">BMW Premium Parts</div>
-                            <div class="carousel-item-desc">OEM & Aftermarket</div>
+                            <div class="carousel-item-title" data-i18n="carousel.item2.title">BMW Premium Parts</div>
+                            <div class="carousel-item-desc" data-i18n="carousel.item2.desc">OEM & Aftermarket</div>
                         </div>
                     </div>
                 </div>
@@ -562,8 +563,8 @@
                     <img src="/assets/images/parts/connect-part-to-people-4.jpg" alt="Full Catalog" loading="lazy">
                     <div class="carousel-item-overlay">
                         <div>
-                            <div class="carousel-item-title">Full Catalog</div>
-                            <div class="carousel-item-desc">Every part you need</div>
+                            <div class="carousel-item-title" data-i18n="carousel.item3.title">Full Catalog</div>
+                            <div class="carousel-item-desc" data-i18n="carousel.item3.desc">Every part you need</div>
                         </div>
                     </div>
                 </div>
@@ -572,8 +573,8 @@
                         loading="lazy">
                     <div class="carousel-item-overlay">
                         <div>
-                            <div class="carousel-item-title">Performance Engines</div>
-                            <div class="carousel-item-desc">High-performance parts</div>
+                            <div class="carousel-item-title" data-i18n="carousel.item4.title">Performance Engines</div>
+                            <div class="carousel-item-desc" data-i18n="carousel.item4.desc">High-performance parts</div>
                         </div>
                     </div>
                 </div>
@@ -581,8 +582,8 @@
                     <img src="/assets/images/parts/connect-part-to-people-8.jpg" alt="Expert Service" loading="lazy">
                     <div class="carousel-item-overlay">
                         <div>
-                            <div class="carousel-item-title">Expert Service</div>
-                            <div class="carousel-item-desc">Professional guidance</div>
+                            <div class="carousel-item-title" data-i18n="carousel.item5.title">Expert Service</div>
+                            <div class="carousel-item-desc" data-i18n="carousel.item5.desc">Professional guidance</div>
                         </div>
                     </div>
                 </div>
@@ -591,8 +592,8 @@
                         loading="lazy">
                     <div class="carousel-item-overlay">
                         <div>
-                            <div class="carousel-item-title">Industrial Scale</div>
-                            <div class="carousel-item-desc">Massive inventory</div>
+                            <div class="carousel-item-title" data-i18n="carousel.item6.title">Industrial Scale</div>
+                            <div class="carousel-item-desc" data-i18n="carousel.item6.desc">Massive inventory</div>
                         </div>
                     </div>
                 </div>
@@ -602,8 +603,9 @@
                         loading="lazy">
                     <div class="carousel-item-overlay">
                         <div>
-                            <div class="carousel-item-title">Engine Components</div>
-                            <div class="carousel-item-desc">Premium quality internals</div>
+                            <div class="carousel-item-title" data-i18n="carousel.item1.title">Engine Components</div>
+                            <div class="carousel-item-desc" data-i18n="carousel.item1.desc">Premium quality internals
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -611,8 +613,8 @@
                     <img src="/assets/images/parts/wp8391790-auto-parts-wallpapers.jpg" alt="BMW Parts" loading="lazy">
                     <div class="carousel-item-overlay">
                         <div>
-                            <div class="carousel-item-title">BMW Premium Parts</div>
-                            <div class="carousel-item-desc">OEM & Aftermarket</div>
+                            <div class="carousel-item-title" data-i18n="carousel.item2.title">BMW Premium Parts</div>
+                            <div class="carousel-item-desc" data-i18n="carousel.item2.desc">OEM & Aftermarket</div>
                         </div>
                     </div>
                 </div>
@@ -620,8 +622,8 @@
                     <img src="/assets/images/parts/connect-part-to-people-4.jpg" alt="Full Catalog" loading="lazy">
                     <div class="carousel-item-overlay">
                         <div>
-                            <div class="carousel-item-title">Full Catalog</div>
-                            <div class="carousel-item-desc">Every part you need</div>
+                            <div class="carousel-item-title" data-i18n="carousel.item3.title">Full Catalog</div>
+                            <div class="carousel-item-desc" data-i18n="carousel.item3.desc">Every part you need</div>
                         </div>
                     </div>
                 </div>
@@ -630,8 +632,8 @@
                         loading="lazy">
                     <div class="carousel-item-overlay">
                         <div>
-                            <div class="carousel-item-title">Performance Engines</div>
-                            <div class="carousel-item-desc">High-performance parts</div>
+                            <div class="carousel-item-title" data-i18n="carousel.item4.title">Performance Engines</div>
+                            <div class="carousel-item-desc" data-i18n="carousel.item4.desc">High-performance parts</div>
                         </div>
                     </div>
                 </div>
@@ -639,8 +641,8 @@
                     <img src="/assets/images/parts/connect-part-to-people-8.jpg" alt="Expert Service" loading="lazy">
                     <div class="carousel-item-overlay">
                         <div>
-                            <div class="carousel-item-title">Expert Service</div>
-                            <div class="carousel-item-desc">Professional guidance</div>
+                            <div class="carousel-item-title" data-i18n="carousel.item5.title">Expert Service</div>
+                            <div class="carousel-item-desc" data-i18n="carousel.item5.desc">Professional guidance</div>
                         </div>
                     </div>
                 </div>
@@ -649,8 +651,8 @@
                         loading="lazy">
                     <div class="carousel-item-overlay">
                         <div>
-                            <div class="carousel-item-title">Industrial Scale</div>
-                            <div class="carousel-item-desc">Massive inventory</div>
+                            <div class="carousel-item-title" data-i18n="carousel.item6.title">Industrial Scale</div>
+                            <div class="carousel-item-desc" data-i18n="carousel.item6.desc">Massive inventory</div>
                         </div>
                     </div>
                 </div>
