Add complete i18n translations for About page Company Info cards

--- a/public/about.html
+++ b/public/about.html
@@ -1309,48 +1309,67 @@
             </div>
             <div class="info-grid">
                 <div class="info-card reveal">
-                    <h3>📋 Legal Identity</h3>
-                    <p><strong>Company Name:</strong><br>
+                    <h3 data-i18n="info.legal.title">📋 Legal Identity</h3>
+                    <p data-i18n="info.legal.company">
+                        <strong>Company Name:</strong><br>
                         QScrap Services & Trading L.L.C<br>
-                        كيوسكراب للخدمات والتجارة ذ.م.م</p>
-                    <p><strong>Commercial Registration:</strong><br>
-                        CR Number: 155892</p>
-                    <p><strong>Registered Address:</strong><br>
+                        كيوسكراب للخدمات والتجارة ذ.م.م
+                    </p>
+                    <p data-i18n="info.legal.cr">
+                        <strong>Commercial Registration:</strong><br>
+                        CR Number: 155892
+                    </p>
+                    <p data-i18n="info.legal.address">
+                        <strong>Registered Address:</strong><br>
                         P.O. Box 32544<br>
                         Industrial Area Street 10<br>
-                        Doha, Qatar</p>
+                        Doha, Qatar
+                    </p>
                 </div>
                 <div class="info-card reveal">
-                    <h3>📞 Contact Us</h3>
-                    <p><strong>Customer Support:</strong><br>
+                    <h3 data-i18n="info.contact.title">📞 Contact Us</h3>
+                    <p data-i18n="info.contact.support">
+                        <strong>Customer Support:</strong><br>
                         <a href="mailto:support@qscrap.qa">support@qscrap.qa</a>
                     </p>
-                    <p><strong>Mobile:</strong><br>
+                    <p data-i18n="info.contact.mobile">
+                        <strong>Mobile:</strong><br>
                         <a href="tel:+97450267974">+974 5026 7974</a><br>
                         <a href="tel:+97455906912">+974 5590 6912</a>
                     </p>
-                    <p><strong>Landline:</strong><br>
-                        +974 4455 4444</p>
-                    <p><strong>Business Hours:</strong><br>
+                    <p data-i18n="info.contact.landline">
+                        <strong>Landline:</strong><br>
+                        +974 4455 4444
+                    </p>
+                    <p data-i18n="info.contact.hours">
+                        <strong>Business Hours:</strong><br>
                         Saturday - Thursday<br>
-                        8:00 AM - 8:00 PM (Qatar Time)</p>
+                        8:00 AM - 8:00 PM (Qatar Time)
+                    </p>
                 </div>
                 <div class="info-card reveal">
-                    <h3>🔒 Consumer Protection</h3>
-                    <p>QScrap operates in full compliance with Qatar's consumer protection laws:</p>
-                    <p><strong>Law No. 8 of 2008</strong> - Consumer Protection<br>
+                    <h3 data-i18n="info.protection.title">🔒 Consumer Protection</h3>
+                    <p data-i18n="info.protection.intro">QScrap operates in full compliance with Qatar's consumer
+                        protection laws:</p>
+                    <p data-i18n="info.protection.laws">
+                        <strong>Law No. 8 of 2008</strong> - Consumer Protection<br>
                         <strong>Law No. 13 of 2016</strong> - Personal Data Protection<br>
                         <strong>MOCI Decision 25/2024</strong> - E-Commerce Regulations
                     </p>
                 </div>
                 <div class="info-card reveal">
-                    <h3>📱 Download Our App</h3>
-                    <p>Get the QScrap mobile app for the best experience:</p>
-                    <p><strong>For Customers:</strong><br>
-                        Find parts, track orders, and enjoy same-day delivery.</p>
-                    <p><strong>For Drivers:</strong><br>
-                        Join our delivery network and earn more.</p>
-                    <p style="margin-top: 16px;"><em>Available on iOS and Android</em></p>
+                    <h3 data-i18n="info.app.title">📱 Download Our App</h3>
+                    <p data-i18n="info.app.intro">Get the QScrap mobile app for the best experience:</p>
+                    <p data-i18n="info.app.customers">
+                        <strong>For Customers:</strong><br>
+                        Find parts, track orders, and enjoy same-day delivery.
+                    </p>
+                    <p data-i18n="info.app.drivers">
+                        <strong>For Drivers:</strong><br>
+                        Join our delivery network and earn more.
+                    </p>
+                    <p style="margin-top: 16px;" data-i18n="info.app.available"><em>Available on iOS and Android</em>
+                    </p>
                 </div>
             </div>
         </div>
