--- a/public/about.html
+++ b/public/about.html
@@ -1405,32 +1405,34 @@
                         <img src="/assets/images/qscrap-logo.png?v=2026" alt="QScrap"
                             style="filter: brightness(0) invert(1);">
                     </a>
-                    <p>Qatar's premium automotive parts marketplace. Connecting customers with verified garages for
+                    <p data-i18n="footer.tagline">Qatar's premium automotive parts marketplace. Connecting customers
+                        with verified garages for
                         quality new, used, and OEM parts.</p>
                 </div>
                 <div>
-                    <h4 class="footer-title">Company</h4>
+                    <h4 class="footer-title" data-i18n="footer.company">Company</h4>
                     <ul class="footer-links">
-                        <li><a href="/about.html">About Us</a></li>
-                        <li><a href="/partners.html">For Businesses</a></li>
-                        <li><a href="/about.html#contact">Contact</a></li>
-                        <li><a href="/#how-it-works">How It Works</a></li>
+                        <li><a href="/about.html" data-i18n="footer.aboutUs">About Us</a></li>
+                        <li><a href="/partners.html" data-i18n="footer.forBusiness">For Businesses</a></li>
+                        <li><a href="/about.html#contact" data-i18n="footer.contact">Contact</a></li>
+                        <li><a href="/#how-it-works" data-i18n="footer.howItWorks">How It Works</a></li>
                     </ul>
                 </div>
                 <div>
-                    <h4 class="footer-title">Legal</h4>
+                    <h4 class="footer-title" data-i18n="footer.legal">Legal</h4>
                     <ul class="footer-links">
-                        <li><a href="/privacy.html">Privacy Policy</a></li>
-                        <li><a href="/terms.html">Terms of Service</a></li>
-                        <li><a href="/refund.html">Refund Policy</a></li>
+                        <li><a href="/privacy.html" data-i18n="footer.privacy">Privacy Policy</a></li>
+                        <li><a href="/terms.html" data-i18n="footer.terms">Terms of Service</a></li>
+                        <li><a href="/refund.html" data-i18n="footer.refund">Refund Policy</a></li>
                     </ul>
                 </div>
                 <div>
-                    <h4 class="footer-title">Contact</h4>
+                    <h4 class="footer-title" data-i18n="footer.contactTitle">Contact</h4>
                     <ul class="footer-links">
-                        <li><a href="mailto:support@qscrap.qa">📧 support@qscrap.qa</a></li>
-                        <li><a href="tel:+97450267974">📞 +974 5026 7974</a></li>
-                        <li><a href="https://wa.me/97450267974" target="_blank">💬 WhatsApp Support</a></li>
+                        <li><a href="mailto:support@qscrap.qa" data-i18n="footer.email">📧 support@qscrap.qa</a></li>
+                        <li><a href="tel:+97450267974" data-i18n="footer.phone">📞 +974 5026 7974</a></li>
+                        <li><a href="https://wa.me/97450267974" target="_blank" data-i18n="footer.whatsapp">💬 WhatsApp
+                                Support</a></li>
                     </ul>
                 </div>
             </div>
