Add dir=ltr to phone numbers for correct display in Arabic mode

--- a/public/partners.html
+++ b/public/partners.html
@@ -2066,7 +2066,7 @@
             </div>
 
             <p class="cta-contact">
-                <span data-i18n="cta.contact">Questions? Call</span> <a href="tel:+97444554444"
+                <span data-i18n="cta.contact">Questions? Call</span> <a href="tel:+97444554444" dir="ltr"
                     data-i18n="cta.contactLink">+974 4455 4444</a> <span data-i18n="cta.contactSuffix">to speak with our
                     partner team</span>
             </p>
